# lidarrytdlsc

./: .env  .gitignore  pyproject.toml  pyvenv.cfg  requirements.txt  sample.env
gui/: app.py
gui/app/: main.py  state.py  todo_queue.py
gui/app/background/: workers.py
gui/app/helpers/: data_generation.py  generic.py
gui/app/models/: user.py
gui/app/routes/: dashboard.py  profile.py  settings.py
gui/app/static/css/: main.css
gui/app/static/js/: main.js  socket.js  table.js
gui/app/templates/: _base.j2  dashboard.j2  index.html
gui/app/templates/partials/: navbar.j2  sidebar.j2
gui/app/templates/partials/dashboard/: cards.j2  mass_action_menu.j2  table_container.j2  user_input_menu.j2
gui/app/ws/: handle.py  tickets.py
lidarr/: api.py  helper.py
lidarr/models/: album.py  artist.py  image.py  link.py  media.py  rating.py  release.py  statistics.py
scripts/: clear_tmp.sh
yt/: cli.py  debug.py  downloader.py  helper.py  identify.py  playlist.py  score.py  search.py  thumbnail.py  vars.py
yt/models/: accessibility.py  channel.py  description_snippit_part.py  thumbnail.py  video.py  viewcount.py
